prod-croatia-components-main@5916bad7826/unleash-be/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: unleash-be
  namespace: unleash-be
spec:
  host: unleash-be.apps.prod-nonpci-shared.nrapp.cloud
  to:
    kind: Service
    name: unleash-be
    weight: 100
  port:
    targetPort: 4242
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
